--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ html, body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background: linear-gradient(to bottom, rgb(48, 104, 71) 80%, rgb(27, 48, 29))
+  background: white;
 }
